store1/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store1-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store1-backend
  template:
    metadata:
      labels:
        app: store1-backend
    spec:
      containers:
        - name: backend
          image: davidkhan/medusadev:backend
          ports:
            - containerPort: 9000
