store1/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store1-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store1-frontend
  template:
    metadata:
      labels:
        app: store1-frontend
    spec:
      containers:
        - name: frontend
          image: davidkhan/medusadev:frontend
          ports:
            - containerPort: 3000
