store1/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store1-backend
spec:
  selector:
    app: store1-backend
  ports:
    - port: 80
      targetPort: 9000
  type: ClusterIP
