store1/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store1-frontend
spec:
  selector:
    app: store1-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
