store1/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store1-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store1-postgres
  template:
    metadata:
      labels:
        app: store1-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: store1-postgres
spec:
  selector:
    app: store1-postgres
  ports:
    - port: 5432
