store1/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store1-postgres
spec:
  selector:
    app: store1-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
