store1/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store1-redis
spec:
  selector:
    app: store1-redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
